--- a/Course/Course.csproj
+++ b/Course/Course.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -8,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>Course</RootNamespace>
     <AssemblyName>Course</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -27,6 +28,9 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -37,6 +41,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,11 +51,22 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -62,6 +78,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CatalogDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CatalogDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Forms\AddBook.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,11 +95,11 @@
     <Compile Include="Forms\AdminPage.Designer.cs">
       <DependentUpon>AdminPage.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\DeleteBook.cs">
+    <Compile Include="Forms\DeleteBookPage.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\DeleteBook.Designer.cs">
-      <DependentUpon>DeleteBook.cs</DependentUpon>
+    <Compile Include="Forms\DeleteBookPage.Designer.cs">
+      <DependentUpon>DeleteBookPage.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\EditBook.cs">
       <SubType>Form</SubType>
@@ -92,42 +113,62 @@
     <Compile Include="Forms\GuestPage.Designer.cs">
       <DependentUpon>GuestPage.cs</DependentUpon>
     </Compile>
-    <Compile Include="LibraryDataDataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>LibraryDataDataSet.xsd</DependentUpon>
-    </Compile>
     <Compile Include="Forms\LoginPage.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\LoginPage.Designer.cs">
       <DependentUpon>LoginPage.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model\AddBookModel.cs" />
-    <Compile Include="Model\DeleteBookModel.cs" />
-    <Compile Include="Model\EditBookModel.cs" />
-    <Compile Include="Model\GuestModel.cs" />
-    <Compile Include="Model\LoginModel.cs" />
+    <Compile Include="Model\Admins.cs">
+      <DependentUpon>CatalogModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Books.cs">
+      <DependentUpon>CatalogModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\CatalogModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CatalogModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\CatalogModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CatalogModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\CatalogModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CatalogModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Users.cs">
+      <DependentUpon>CatalogModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\WishList.cs">
+      <DependentUpon>CatalogModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Presenter\AddBookPresenter.cs" />
     <Compile Include="Presenter\DeleteBookPresenter.cs" />
     <Compile Include="Presenter\EditBookPresenter.cs" />
+    <Compile Include="Presenter\GuestLogPresenter.cs" />
     <Compile Include="Presenter\GuestPresenter.cs" />
-    <Compile Include="Presenter\LoginPresenter.cs" />
+    <Compile Include="Presenter\AdminPresenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\IAddBook.cs" />
+    <Compile Include="View\IAddWishList.cs" />
+    <Compile Include="View\IAdminLog.cs" />
     <Compile Include="View\IDeleteBook.cs" />
     <Compile Include="View\IEditBook.cs" />
-    <Compile Include="View\IGuest.cs" />
-    <Compile Include="View\ILogin.cs" />
+    <Compile Include="View\IGuestPage.cs" />
+    <Compile Include="View\IGuestLog.cs" />
     <EmbeddedResource Include="Forms\AddBook.resx">
       <DependentUpon>AddBook.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AdminPage.resx">
       <DependentUpon>AdminPage.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\DeleteBook.resx">
-      <DependentUpon>DeleteBook.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\DeleteBookPage.resx">
+      <DependentUpon>DeleteBookPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\EditBook.resx">
       <DependentUpon>EditBook.cs</DependentUpon>
@@ -146,19 +187,29 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="ClassDiagram1.cd" />
-    <None Include="LibraryDataDataSet.xsc">
-      <DependentUpon>LibraryDataDataSet.xsd</DependentUpon>
+    <None Include="App.Config" />
+    <None Include="CatalogDataSet.xsc">
+      <DependentUpon>CatalogDataSet.xsd</DependentUpon>
     </None>
-    <None Include="LibraryDataDataSet.xsd">
+    <None Include="CatalogDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>LibraryDataDataSet.Designer.cs</LastGenOutput>
+      <LastGenOutput>CatalogDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="LibraryDataDataSet.xss">
-      <DependentUpon>LibraryDataDataSet.xsd</DependentUpon>
+    <None Include="CatalogDataSet.xss">
+      <DependentUpon>CatalogDataSet.xsd</DependentUpon>
     </None>
+    <None Include="ClassDiagram.cd" />
+    <EntityDeploy Include="Model\CatalogModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>CatalogModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Model\CatalogModel.edmx.diagram">
+      <DependentUpon>CatalogModel.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -168,18 +219,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="LibraryData.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="LibraryData_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>LibraryData.mdf</DependentUpon>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
@@ -193,5 +232,31 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\DataSources\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Model\CatalogModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>CatalogModel.edmx</DependentUpon>
+      <LastGenOutput>CatalogModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Model\CatalogModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>CatalogModel.edmx</DependentUpon>
+      <LastGenOutput>CatalogModel.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
+  </Target>
+  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
 </Project>
